@@ -29,5 +29,5 @@
   "test-depends": [
     "Test"
   ],
-  "version": "0.17"
+  "version": "0.18"
 }
