@@ -7,6 +7,8 @@ Currently it seems to be about 4x faster and uses up about a quarter of the RAM 
 
 This module also includes a very fast to-json function that tony-o created and lizmat later completely refactored.
 
+And now also supports L<JSONC|https://changelog.com/news/jsonc-is-a-superset-of-json-which-supports-comments-6LwR>.
+
 =head2 Exported subroutines
 
 =head3 to-json
@@ -389,8 +391,41 @@ module JSON::Fast:ver<0.17> {
     my sub nom-ws(str $text, int $pos is rw --> Nil) {
         nqp::while(
           nqp::atpos_i($ws, nqp::ordat($text, $pos)),
-          $pos = nqp::add_i($pos, 1)
-        )
+          ++$pos
+        );
+        nqp::if(
+          nqp::iseq_i(nqp::ordat($text,$pos),47),  # /
+          nom-comment($text,++$pos)
+        );
+    }
+
+    my sub nom-comment(str $text, int $pos is rw --> Nil) {
+        my int $ordinal = nqp::ordat($text, $pos);
+        nqp::if(
+          nqp::iseq_i(nqp::ordat($text,$pos),47),           # /
+          nqp::stmts(
+            nqp::while(  # eating a // style comment
+              nqp::isne_i(nqp::ordat($text,++$pos),10),       # not \n
+              nqp::null
+            ),
+            nom-ws($text, ++$pos)
+          ),
+          nqp::if(
+            nqp::iseq_i(nqp::ordat($text,$pos),42),           # *
+            nqp::stmts(
+              nqp::until(  # eating a /*  */ style comment
+                nqp::iseq_i(nqp::ordat($text,++$pos),47)      # /
+                  && nqp::iseq_i(
+                       nqp::ordat($text,nqp::sub_i($pos,1)),  # *
+                       42
+                     ),
+                nqp::null
+              ),
+              nom-ws($text, ++$pos)
+            ),
+            die-unexpected-object($text, $pos)
+          )
+        );
     }
 
     my $hexdigits := nqp::list;
